@@ -284,6 +284,7 @@ namespace eval ::ngBot::module::glftpd {
 		variable ${np}::statdefault
 		variable ${np}::location
 		variable ${np}::announcetochan
+		variable ${np}::stats
 
 		${np}::checkchan $nick $chan
 
@@ -311,7 +312,23 @@ namespace eval ::ngBot::module::glftpd {
 			}
 		}
 
-		if {[catch {set output [exec $binary(STATS) -r $location(GLCONF) $type $time -s $section]} error]} {
+		set zeros ""
+		if {[istrue $stats(hide_zeros)]} {
+			set zeros "-0"
+		}
+		set hideusers [list]
+		if {[info exists stats(hide_users)]} {
+			foreach {u} [split "$stats(hide_users)"] {
+				lappend hideusers "-e$u"
+			}
+		}
+		set hidegroups [list]
+		if {[info exists stats(hide_groups)]} {
+			foreach {u} [split "$stats(hide_groups)"] {
+				lappend hidegroups "-g$u"
+			}
+		}
+		if {[catch {set output [exec $binary(STATS) -r $location(GLCONF) $type $time -s $section $zeros {*}$hideusers {*}$hidegroups]} error]} {
 			putlog "\[ngBot\] Error :: Unable to retrieve stats ($error)."
 			return
 		}
@@ -377,7 +394,7 @@ namespace eval ::ngBot::module::glftpd {
 
 		set output "$theme(PREFIX)$announce(NEW)"
 		set output [${np}::replacevar $output "%section" $section]
-		${np}::sndone $rcvr [${np}::replacebasic $output "NEW"] "NEW"
+		${np}::sndone $rcvr [${np}::replacebasic $output "NEW"]
 		set body "$theme(PREFIX)$announce(NEW_BODY)"
 		set num 0
 
@@ -400,12 +417,12 @@ namespace eval ::ngBot::module::glftpd {
 			set output [${np}::replacevar $output "%files" $files]
 			set output [${np}::replacevar $output "%mbytes" [format "%.1f" [expr {$kbytes / 1024.0}]]]
 			set output [${np}::replacepath $output $sectionpath $dirpath]
-			${np}::sndone $rcvr [${np}::replacebasic $output "NEW"] "NEW_BODY"
+			${np}::sndone $rcvr [${np}::replacebasic $output "NEW"]
 		}
 
 		if {!$num} {
 			set output "$theme(PREFIX)$announce(NEW_NONE)"
-			${np}::sndone $rcvr [${np}::replacebasic $output "NEW"] "NEW_NONE"
+			${np}::sndone $rcvr [${np}::replacebasic $output "NEW"]
 		}
 		return
 	}
@@ -452,7 +469,7 @@ namespace eval ::ngBot::module::glftpd {
 
 		set output "$theme(PREFIX)$announce($type)"
 		set output [${np}::replacevar $output "%section" $section]
-		${np}::sndone $rcvr [${np}::replacebasic $output $type] $type
+		${np}::sndone $rcvr [${np}::replacebasic $output $type]
 		set body "$theme(PREFIX)$announce(${type}_BODY)"
 		set num 0
 
@@ -471,12 +488,12 @@ namespace eval ::ngBot::module::glftpd {
 			set output [${np}::replacevar $output "%reason" $reason]
 			set output [${np}::replacevar $output "%mbytes" [format "%.1f" [expr {$kbytes / 1024.0}]]]
 			set output [${np}::replacepath $output $sectionpath $dirpath]
-			${np}::sndone $rcvr [${np}::replacebasic $output $type] "${type}_BODY"
+			${np}::sndone $rcvr [${np}::replacebasic $output $type]
 		}
 
 		if {!$num} {
 			set output "$theme(PREFIX)$announce(${type}_NONE)"
-			${np}::sndone $rcvr [${np}::replacebasic $output $type] "${type}_NONE"
+			${np}::sndone $rcvr [${np}::replacebasic $output $type]
 		}
 		return
 	}
@@ -518,7 +535,7 @@ namespace eval ::ngBot::module::glftpd {
 
 		set output "$theme(PREFIX)$announce(SEARCH)"
 		set output [${np}::replacevar $output "%pattern" $pattern]
-		${np}::sndone $rcvr [${np}::replacebasic $output "SEARCH"] "SEARCH"
+		${np}::sndone $rcvr [${np}::replacebasic $output "SEARCH"]
 		set body "$theme(PREFIX)$announce(SEARCH_BODY)"
 		set num 0
 
@@ -541,12 +558,12 @@ namespace eval ::ngBot::module::glftpd {
 			set output [${np}::replacevar $output "%files" $files]
 			set output [${np}::replacevar $output "%mbytes" [format "%.1f" [expr {$kbytes / 1024.0}]]]
 			set output [${np}::replacepath $output "/site/*" $dirpath]
-			${np}::sndone $rcvr [${np}::replacebasic $output "SEARCH"] "SEARCH_BODY"
+			${np}::sndone $rcvr [${np}::replacebasic $output "SEARCH"]
 		}
 
 		if {!$num} {
 			set output "$theme(PREFIX)$announce(SEARCH_NONE)"
-			${np}::sndone $rcvr [${np}::replacebasic $output "SEARCH"] "SEARCH_NONE"
+			${np}::sndone $rcvr [${np}::replacebasic $output "SEARCH"]
 		}
 		return
 	}
@@ -591,7 +608,7 @@ namespace eval ::ngBot::module::glftpd {
 		if {![${np}::announcetochancheck $::lastbind 1]} {
 			set rcvr $nick
 		}
-		${np}::sndone $rcvr [${np}::replacebasic $output "BW"] "[string toupper $type]"
+		${np}::sndone $rcvr [${np}::replacebasic $output "BW"]
 		return
 	}
 
@@ -613,7 +630,7 @@ namespace eval ::ngBot::module::glftpd {
 		}
 
 		set output "$theme(PREFIX)$announce(IDLE)"
-		${np}::sndone $rcvr [${np}::replacebasic $output "IDLE"] "IDLE"
+		${np}::sndone $rcvr [${np}::replacebasic $output "IDLE"]
 
 		set raw [exec $binary(WHO) "--raw"]
 		set count 0; set total 0.0
@@ -636,13 +653,13 @@ namespace eval ::ngBot::module::glftpd {
 					set output [${np}::replacevar $output "%since" $since]
 					set output [${np}::replacevar $output "%currentdir" $curdir]
 					set output [${np}::replacevar $output "%u_pid" $upid]
-					${np}::sndone $rcvr [${np}::replacebasic $output "IDLE"] "USERIDLE"
+					${np}::sndone $rcvr [${np}::replacebasic $output "IDLE"]
 					incr count
 				}
 			}
 		}
 		set output [${np}::replacevar "$theme(PREFIX)$announce(TOTIDLE)" "%count" $count]
-		${np}::sndone $rcvr [${np}::replacebasic $output "IDLE"] "TOTIDLE"
+		${np}::sndone $rcvr [${np}::replacebasic $output "IDLE"]
 		return
 	}
 
@@ -683,8 +700,6 @@ namespace eval ::ngBot::module::glftpd {
 				} elseif {$action == "ID"} {
 					set output "$theme(PREFIX)$announce(SPEEDID)"
 					set output [${np}::replacevar $output "%idletime" [${np}::format_duration [lindex $line 5]]]
-				} else {
-					set action "ERROR"
 				}
 				set output [${np}::replacevar $output "%u_name" [lindex $line 2]]
 				set output [${np}::replacevar $output "%g_name" [lindex $line 3]]
@@ -693,20 +708,20 @@ namespace eval ::ngBot::module::glftpd {
 				set output [${np}::replacevar $output "%f_name" [lindex $line 8]]
 				set output [${np}::replacevar $output "%currentdir" [lindex $line 10]]
 				set output [${np}::replacevar $output "%u_pid" [lindex $line 11]]
-				${np}::sndone $rcvr [${np}::replacebasic $output "SPEED"] "SPEED$action"
+				${np}::sndone $rcvr [${np}::replacebasic $output "SPEED"]
 			}
 		} else {
 			set base_output "$theme(PREFIX)$announce(DEFAULT)"
 			foreach line [split [exec $binary(WHO) [lindex $argv 0]] "\n"] {
 				set output [${np}::replacevar $base_output "%msg" $line]
-				${np}::sndone $rcvr [${np}::replacebasic $output "SPEED"] "SPEED"
+				${np}::sndone $rcvr [${np}::replacebasic $output "SPEED"]
 			}
 		}
 
 		if {[string equal "" $line]} {
 			set output "$theme(PREFIX)$announce(SPEEDERROR)"
 			set output [${np}::replacevar $output "%msg" "User not online."]
-			${np}::sndone $rcvr [${np}::replacebasic $output "SPEED"] "SPEEDERROR"
+			${np}::sndone $rcvr [${np}::replacebasic $output "SPEED"]
 		}
 		return
 	}
@@ -738,7 +753,7 @@ namespace eval ::ngBot::module::glftpd {
 		}
 
 		set output "$theme(PREFIX)$announce($type_long)"
-		${np}::sndone $rcvr [${np}::replacebasic $output $type_long] $type_long
+		${np}::sndone $rcvr [${np}::replacebasic $output $type_long]
 
 		set raw [exec $binary(WHO) "--raw"]
 		set count 0; set total 0.0
@@ -757,7 +772,7 @@ namespace eval ::ngBot::module::glftpd {
 				set output [${np}::replacevar $output "%filename" [lindex $line 8]]
 				set output [${np}::replacevar $output "%currentdir" [lindex $line 10]]
 				set output [${np}::replacevar $output "%u_pid" [lindex $line 11]]
-				${np}::sndone $rcvr [${np}::replacebasic $output $type_long] "USER"
+				${np}::sndone $rcvr [${np}::replacebasic $output $type_long]
 				incr count
 				set total [expr {$total + $uspeed}]
 			}
@@ -769,7 +784,7 @@ namespace eval ::ngBot::module::glftpd {
 		set output [${np}::replacevar $output "%count" $count]
 		set output [${np}::replacevar $output "%total" [${np}::format_speed $total "none"]]
 		set output [${np}::replacevar $output "%per" $per]
-		${np}::sndone $rcvr [${np}::replacebasic $output $type_long] "TOTUPDN"
+		${np}::sndone $rcvr [${np}::replacebasic $output $type_long]
 		return
 	}
 
