@@ -60,6 +60,14 @@ set local_devices_only      "TRUE"
 set device_size             "AUTO"
 
 ################################################################################
+# Stats Settings
+################################################################################
+
+set stats(hide_zeros)       "TRUE"
+set stats(hide_users)       "glftpd"
+set stats(hide_groups)      "glftpd"
+
+################################################################################
 # Bouncers
 ################################################################################
 
